[tool.poetry]
name = "reservation-system"
version = "0.1.0"
description = ""
authors = ["Amine El amrani <amine_el_amrani@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
flask-jwt-extended = "^4.7.1"
flask-restx = "^1.3.0"
celery = "^5.4.0"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
